# Xarray-DataAccessor

./: .gitignore  .pre-commit-config.yaml  Data_Sources_Info.md  LICENSE  README.md  brazil_data_pull.py  brazil_to_csv.ipynb  convert_elements_to_csv.ipynb  convert_nodes_to_csv.ipynb  dev_testing.py  environment.yml  environment_demo.yml  environment_dev.yml  lake_erie_datapull.py  pyproject.toml  reorder_cols_dask.py  sampling_algos.ipynb  testing.ipynb
LimnoTech_data_pulls/: brazil_data_pull.py
LimnoTech_data_pulls/lake_erie_data_pull/: LEEM_boundary.dbf  LEEM_boundary.sbx  lake_erie_datapull.py
brazil_data/: brazil_coords.csv
dev_sandbox/: dev_testing.py  testing.ipynb
era5_to_xarray/: aws_data_accessor.py  cds_data_accessor.py  data_accessor.py  data_getter.py  datasets_info.py  era5_data_accessor.py  era5_datasets_info.py  era5_to_xarray.py  prep_query.py
examples/: north_america_demo.ipynb  reorder_cols_dask.py  south_america_demo.ipynb
lake_erie_data/: LEEM_boundary.shp  element_latlongs.csv  element_latlons.csv  node_element_latlons.xlsx  node_latlongs.csv
read_into_xarray/: __init__.py  data_accessor.py  era5_data_accessor.py  era5_datasets_info.py  multi_threading.py  testing.ipynb
scripts/: brazil_data_pull.py
src/xarray_data_accessor/: __init__.py  (+9 more)
testing/: test_1_import.py  test_2_era5.py  test_3_data_manipulations.py  test_3_era5_manipulations.py  test_4_nasa_lpdaac.py  test_5_gssha.py  test_era5.py  test_import.py  tests_draft.py
xarray_data_accessor/: data_accessor.py  data_stacks.py  era5_data_accessor.py  multi_threading.py  shared_types.py
(+31 files in other folders)
